fixing alignment of text/individual pictures

--- a/static/site.css
+++ b/static/site.css
@@ -210,7 +210,7 @@ a {
 }
 
 .team-member-name {
-  padding-top: 2px;
+  padding-top: 4px;
 }
 
 .team-roster-teamname {
